// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders an object as a list of key value pairs 1`] = `
<dl
  className="descriptionList"
>
  <div
    className="termGroup"
  >
    <dt
      className="base regular base blue"
    >
      Issued
    </dt>
    <dd
      className="base regular base greyBlueDark"
    >
      2018-12-08
    </dd>
  </div>
  <div
    className="termGroup"
  >
    <dt
      className="base regular base blue"
    >
      Due
    </dt>
    <dd
      className="base regular base greyBlueDark"
    >
      2019-01-06
    </dd>
  </div>
</dl>
`;

exports[`renders an object as a list of key value pairs with an element 1`] = `
<dl
  className="descriptionList"
>
  <div
    className="termGroup"
  >
    <dt
      className="base regular base blue"
    >
      Foo
    </dt>
    <dd
      className="base regular base greyBlueDark"
    >
      Foo
    </dd>
  </div>
  <div
    className="termGroup"
  >
    <dt
      className="base regular base blue"
    >
      Bar
    </dt>
    <dd
      className="base regular base greyBlueDark"
    >
      Bar
    </dd>
  </div>
</dl>
`;
